# compliance-audit-engine

./: .env.example  .gitignore  CLAUDE.md  README.md
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  audit.py  health.py  share.py
backend/app/models/: __init__.py  intake.py  job.py  report.py
backend/app/services/: bedrock.py  dynamo.py  email.py  s3.py  share.py  sqs.py
backend/index_refresher/: handler.py
backend/orchestrator/: handler.py
backend/orchestrator/pipeline/: __init__.py  base.py  step_01_sam.py  step_02_csl.py  step_03_ofac.py  step_04_leie.py  step_05_edgar.py  step_06_irs.py  step_07_sos_home.py  step_08_sos_states.py  step_09_nova_search.py  step_10_nova_report.py
backend/pdf_generator/: handler.py
backend/scrapers/: base.py
backend/scrapers/states/: __init__.py  co.py  dc.py  de.py  fl.py  il.py  tn.py  va.py  wa.py  wy.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_models.py  test_pipeline_steps.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useAuditStatus.ts
frontend/src/lib/: api-client.ts  queries.ts  types.ts
infrastructure/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: compliance-stack.ts
infrastructure/lib/constructs/: api-gateway.ts  lambda-functions.ts  queues.ts  storage.ts  tables.ts
(+16 files in other folders)
