[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-audit-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "mangum>=0.19",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic[email]>=2.7",
    "boto3>=1.34",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "playwright>=1.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[dynamodb,s3,sqs,bedrock-runtime,ses]>=1.34",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "orchestrator*", "scrapers*", "index_refresher*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
